611 - fix ui dark mode disabled

--- a/src/components/modus-wc-file-dropzone/modus-wc-file-dropzone.scss
+++ b/src/components/modus-wc-file-dropzone/modus-wc-file-dropzone.scss
@@ -110,7 +110,7 @@ modus-wc-file-dropzone .modus-wc-file-dropzone {
     .dropzone-content {
       background-color: var(--modus-wc-color-gray-9);
       border-color: var(--modus-wc-color-gray-3);
-      color: var(--modus-wc-color-gray-6);
+      color: var(--modus-wc-color-gray-3);
       cursor: not-allowed;
     }
   }
